fix inline btn wrap

--- a/assets/styl/_modules/_buttons.styl
+++ b/assets/styl/_modules/_buttons.styl
@@ -24,6 +24,7 @@
 //
 // Styleguide Components.Buttons.ButtonsDefault
 .btn
+    display inline-block
     padding .5em 1.5em
     border-radius 20em
     font-family $font-secondary
